jupyterhub/overlays/prod/jupyterhub-route.enc.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
    name: jupyterhub
spec:
    host: jupyterhub.datahub.redhat.com
    port:
        targetPort: 8080-tcp
    tls:
        certificate: ENC[AES256_GCM,data:S0ITmym9Pujvny239rrq/UvBX9BYJupL8vyvPSxdYB/uLGfHmoFmnvsUDNtaRPD2IA2XTUgPBLIV0oTgT0t9r5DTNDKkDC5ql9Ucyu5X6f0H2SLGCCadxtrHOJ1sscfit0jSw2HOsom7mN0ukkFoWOfvxdx16OVA/+LWOEUatZ30SPJlaQIjyPZYvNMoGXO/1wHRMnvuyyRtzvrZ1rhwQ8jwJQVVzwZURfwBJ2oFDBABDA9FZjtoqKrGYNrWWIjDAbPjuut+PdJNwD5onV5W9GwIPM/L2f9E8kcCUaVewiGf3/MljJzFjffO/L/MwlAn4rayH3ZLGFLpbSEGi/ShdtsrYmA02VD+Wp2eAcNInwpeY3RLoTr5ycCUk8hlRNEqlRbefAy77BJEjDkgCEcmw+NEyln0u/CfDDlhZg0Q6KLAlSNYrHt7DNyzSgVxLpTBhOI+Qc2zSuI [...]
        insecureEdgeTerminationPolicy: ENC[AES256_GCM,data:sZnR0HTfJ1g=,iv:uVxW2pVvHfxohmmCvS91x6v8LTscpVftnwEdlzpRX/4=,tag:CwWQxpuGdn6YkcnLPQZ8Ag==,type:str]
        key: ENC[AES256_GCM,data:BCoArwSC5ZTiErhMntKnrCG3UzAfpT5fnoFhsvTiMRAj1FVR6/EiEX3vP3EgpSD7cqxFXmbekfjemmXfFuY9bGjkjchLR9cprIWELErsNKaF2r3cENqGKRSoP2HvyfdD36wLhTXA6Lh8PI2S2WgYTQpamTJ/y7kgVvjJiIhlCqR80vrZluWPYFqG/C0+s+ZfwjeOx6edQGKv0oJF9oNzR8YNDOVDC9pfEc4VquOYkJ/IGpQ7lyF2bo70eYzCUvMsOjet0qbmXHuRKjrJTUOBIVeLGW2rKmpcEdB+69OHCTPi6bMsGRYwE5qzyLFA+i3Ux150FLHyvP1HvGluJcd6Gfyz5VbFQstWUah4Fvx1MFT/CapyLKK7tQiif/MJkCsnuO2ihJ05WI2/xbkklkTFtbK5byn9t7m5A19JFuV9+hT9PQGGTo2LoGIkql3GQPrvYkhO2G8F/kklTp50xL6 [...]
        termination: ENC[AES256_GCM,data:fkm8WA==,iv:Ap7GRxZNYvYbE+qeCSLgA/W4HzVXMToQj5mvDEKKGt8=,tag:UIpXBsLvc/Ff0jkurqaozw==,type:str]
    to:
        kind: Service
        name: jupyterhub
        weight: 100
    wildcardPolicy: None
status:
    ingress: null
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    lastmodified: '2021-02-23T15:47:16Z'
    mac: ENC[AES256_GCM,data:2U3cKWLLUNAVwiY50LQqbC6tsfAt7K8IXNWw/0G2glfsckE1UyR3/1JnL0UAzVBDmIywuXo1u0h1dwiCsMaxpVA8in5R5NbtLxSPgiAvIpEaxcKnirox8buwTrH9noH4gPQSMVikXY1iZIWNwIZ2DTACRrkp/kbX8xdXU+PUhrA=,iv:l1oxuEoXc05oTqxZPCMxgQCMXTd2q45KqstF1MQi3Zc=,tag:v32HBFeP/CF2AjKG4b/gOQ==,type:str]
    pgp:
    -   created_at: '2021-02-23T15:47:16Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQf/cWWuNQB3J9hNbzQ5w2iT/TkM+DckcjNhQTieIQUqpqzD
[...]
            9t/FlMgKLYmd3l+3wJqBW/TSqHAcTVwwyjwzgZc=
            =jERa
            -----END PGP MESSAGE-----
        fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.6.1
